--- a/package.json
+++ b/package.json
@@ -3,16 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/common": "^7.2.5",
-    "@angular/compiler": "^7.2.5",
-    "@angular/core": "^7.2.5",
-    "@angular/forms": "^7.2.5",
-    "@angular/platform-browser": "^7.2.5",
-    "@angular/platform-browser-dynamic": "^7.2.5",
-    "@angular/router": "^7.2.5",
-    "core-js": "^2.6.5",
-    "rxjs": "^6.4.0",
-    "zone.js": "^0.8.29"
+    "@angular/animations": ">=7.0.0",
+    "@angular/cdk": "7.3.5",
+    "@angular/common": "7.2.9",
+    "@angular/compiler": "7.2.9",
+    "@angular/core": "7.2.9",
+    "@angular/flex-layout": "7.0.0-beta.24",
+    "@angular/forms": "7.2.9",
+    "@angular/material": "^7.3.5",
+    "@angular/platform-browser": "7.2.9",
+    "@angular/platform-browser-dynamic": "7.2.9",
+    "@angular/router": "7.2.9",
+    "@types/lodash": "4.14.123",
+    "core-js": "2.6.5",
+    "lodash": "4.17.11",
+    "ng-material2-facet-search": "0.1.1",
+    "rxjs": "6.4.0",
+    "zone.js": "0.8.29"
   },
   "scripts": {
     "ng": "ng",
