--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/lodash": "4.14.123",
     "core-js": "2.6.5",
     "lodash": "4.17.11",
-    "ng-material2-facet-search": "0.1.1",
+    "ng-material2-facet-search": "^0.1.5",
     "rxjs": "6.4.0",
     "zone.js": "0.8.29"
   },
